[gd_scene load_steps=3 format=3 uid="uid://cdpnbpb612343"]

[ext_resource type="Script" path="res://Scene/winning_screen.gd" id="1_gedw4"]
[ext_resource type="Texture2D" uid="uid://bn2rgigw840i0" path="res://asdasdasdasdasdsadsadsasda.jpg" id="2_85qt2"]

[node name="Winning screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gedw4")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 820.0
offset_bottom = 620.0
texture = ExtResource("2_85qt2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 63.0
offset_top = 179.0
offset_right = 378.0
offset_bottom = 309.0
scale = Vector2(2.16, 2.16)

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "You Won"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 277.0
offset_top = 235.0
offset_right = 525.0
offset_bottom = 306.0

[node name="Label2" type="Label" parent="VBoxContainer2"]
layout_mode = 2
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = 460.0
offset_right = 642.0
offset_bottom = 558.0

[node name="Replay Adventure" type="Button" parent="VBoxContainer3"]
layout_mode = 2
text = "Replay adventure"

[node name="Leave Game" type="Button" parent="VBoxContainer3"]
layout_mode = 2
text = "Leave game"

[connection signal="pressed" from="VBoxContainer3/Replay Adventure" to="." method="_on_replay_adventure_pressed"]
[connection signal="pressed" from="VBoxContainer3/Leave Game" to="." method="_on_leave_game_pressed"]
